[package]
name = "csv-adapter"
version = "0.4.0"
edition = "2021"
description = "Unified meta-crate for CSV (Client-Side Validation) adapters — single entry point for all CSV operations"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://docs.rs/csv-adapter"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version = "1.75"

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core — always included
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }

# Chain adapters — optional, enabled via feature flags
csv-adapter-bitcoin = { version = "0.4.0", path = "../csv-adapter-bitcoin", optional = true }
csv-adapter-ethereum = { version = "0.4.0", path = "../csv-adapter-ethereum", optional = true }
csv-adapter-sui = { version = "0.4.0", path = "../csv-adapter-sui", optional = true }
csv-adapter-aptos = { version = "0.4.0", path = "../csv-adapter-aptos", optional = true }
csv-adapter-solana = { version = "0.4.0", path = "../csv-adapter-solana", optional = true }

# Persistence
csv-adapter-store = { version = "0.4.0", path = "../csv-adapter-store", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
async-std = { version = "1", optional = true }

# Serialization / utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
bs58 = "0.5"
sha2 = "0.10"
toml = "0.8"
dirs = "5.0"
rand = "0.8"

# Optional: bring in chain-specific heavy deps when full chain support is needed
bitcoin = { version = "0.30", features = ["serde", "rand"], optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }
bip32 = { version = "0.5", features = ["std", "mnemonic"], optional = true }
solana-sdk = { version = "3.0", optional = true }

[features]
default = ["std", "tokio"]
std = ["csv-adapter-core/std"]

# Chain features
bitcoin = ["dep:csv-adapter-bitcoin", "dep:bitcoin", "dep:bip32"]
ethereum = ["dep:csv-adapter-ethereum"]
sui = ["dep:csv-adapter-sui"]
aptos = ["dep:csv-adapter-aptos"]
solana = ["dep:csv-adapter-solana"]
all-chains = ["bitcoin", "ethereum", "sui", "aptos", "solana"]

# RPC features for chain queries
rpc = [
    "bitcoin",
    "ethereum",
    "csv-adapter-bitcoin/rpc",
    "csv-adapter-ethereum/rpc",
]

# Deployment features (enable SDK-based contract deployment)
deploy-ethereum = ["ethereum", "csv-adapter-ethereum/rpc"]
deploy-sui = ["sui", "csv-adapter-sui/sui-sdk-deploy", "csv-adapter-sui/rpc", "dep:ed25519-dalek"]
deploy-aptos = ["aptos", "csv-adapter-aptos/aptos-sdk", "dep:ed25519-dalek"]
deploy-solana = ["solana", "solana-sdk"]
deploy-all = ["deploy-ethereum", "deploy-solana", "deploy-sui", "deploy-aptos"]

# Runtime features
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

# Storage features
sqlite = ["dep:csv-adapter-store"]
in-memory = []

# Wallet / crypto
wallet = ["dep:ed25519-dalek", "dep:bip32"]

# Experimental features
experimental = []

[dev-dependencies]
rand = "0.8"
tempfile = "3"
csv-adapter-store = { version = "0.4.0", path = "../csv-adapter-store" }

[[example]]
name = "subscriptions"
path = "../examples/subscriptions.rs"
required-features = ["all-chains", "tokio"]

[[example]]
name = "performance"
path = "../examples/performance.rs"
required-features = ["all-chains", "tokio"]

[[example]]
name = "gaming"
path = "../examples/gaming.rs"
required-features = ["all-chains", "tokio"]

[[example]]
name = "parallel_verification"
path = "../examples/parallel_verification.rs"
required-features = ["all-chains", "tokio"]

[lints]
workspace = true
