[package]
name = "csv-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for CSV Adapter — cross-chain Rights, proofs, wallets, and end-to-end testing"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, Qwen3"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
documentation = "https://github.com/zorvan/csv-adapter/blob/main/csv-cli/README.md"
readme = "README.md"
keywords = ["cli", "blockchain", "cryptography", "csv-validation", "cross-chain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[[bin]]
name = "csv"
path = "src/main.rs"

[dependencies]
csv-adapter-core = { version = "0.1", path = "../csv-adapter-core" }
csv-adapter-bitcoin = { version = "0.1", path = "../csv-adapter-bitcoin", features = ["signet-rest"] }
csv-adapter-ethereum = { version = "0.1", path = "../csv-adapter-ethereum" }
csv-adapter-sui = { version = "0.1", path = "../csv-adapter-sui" }
csv-adapter-aptos = { version = "0.1", path = "../csv-adapter-aptos" }
csv-adapter-store = { version = "0.1", path = "../csv-adapter-store" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
hex = "0.4"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
colored = "2.0"
toml = "0.8"

# Chain-specific
bitcoin = { version = "0.30", features = ["serde", "rand"] }
alloy-primitives = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
bip32 = { version = "0.5", features = ["std", "mnemonic"] }
chrono = "0.4"
sha3 = "0.10"
blake2 = "0.10"
typenum = "1.17"
secp256k1 = { version = "0.28", features = ["rand-std"] }

[features]
default = []
rpc = [
    "csv-adapter-bitcoin/rpc",
    "csv-adapter-ethereum/rpc",
    "csv-adapter-sui/rpc",
    "csv-adapter-aptos/rpc",
]
