[package]
name = "csv-cli"
version = "0.4.0"
edition = "2021"
description = "CLI tool for CSV Adapter — cross-chain Rights, proofs, wallets, and end-to-end testing"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
documentation = "https://github.com/client-side-validation/csv-adapter/blob/main/csv-cli/README.md"
readme = "README.md"
keywords = ["cli", "blockchain", "cryptography", "csv-validation", "cross-chain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[[bin]]
name = "csv"
path = "src/main.rs"

[dependencies]
# Phase 5 Compliant: Use only facade and core types
# No direct chain adapter dependencies - all operations go through csv-adapter
csv-adapter = { version = "0.4.0", path = "../csv-adapter", features = ["all-chains"] }
csv-adapter-core = { version = "0.4.0", path = "../csv-adapter-core" }
csv-adapter-store = { version = "0.4.0", path = "../csv-adapter-store", features = ["clap"] }
csv-adapter-keystore = { version = "0.4.0", path = "../csv-adapter-keystore" }

# CLI framework and utilities (no chain-specific crypto)
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dirs = "5.0"
colored = "2.0"
toml = "0.8"
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
