[package]
name = "csv-ethereum"
version = "0.4.0"
edition = "2021"
description = "Ethereum adapter for CSV (Client-Side Validation) with storage slot seals and light-client proofs"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-protocol"
homepage = "https://github.com/client-side-validation/csv-protocol"
documentation = "https://docs.rs/csv-ethereum"
readme = "README.md"
keywords = ["ethereum", "blockchain", "cryptography", "csv-validation", "nullifier"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-core = { version = "0.4.0", path = "../csv-core" }
csv-store = { version = "0.4.0", path = "../csv-store", optional = true }
async-trait.workspace = true
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.28", features = ["global-context", "rand-std", "recovery"] }
log = "0.4"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-trie = "0.7"

# Official Ethereum implementations for maximum compatibility
alloy = { version = "1.8", features = ["full"], optional = true }
alloy-sol-types = { version = "1.5", optional = true }
alloy-contract = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
url = { version = "2.5", optional = true }

# Async runtime — non-optional for polling (PF-03)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde_json = "1.0"

[features]
default = []
rpc = ["alloy", "alloy-sol-types", "alloy-contract", "csv-store", "reqwest", "url"]
production = ["rpc"]

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["rt", "macros"] }
