[package]
name = "csv-explorer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Real-time indexing and visualization for CSV Adapter cross-chain rights"

[dependencies]
csv-adapter-core = { path = "../csv-adapter-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
thiserror = "1.0"
anyhow = "1.0"
