[package]
name        = "csv-explorer"
description = "Real-time indexing and visualization for CSV Adapter cross-chain rights"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, ALL FREE LLMs"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
readme = "README.md"
publish = false

[dependencies]
# Protocol types (sibling workspace)
csv-adapter-core.workspace = true
csv-explorer-shared = { path = "./shared" }
csv-explorer-storage = { path = "./storage" }
csv-explorer-indexer = { path = "./indexer" }

# Async runtime
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Database
sqlx.workspace = true

# HTTP / RPC
reqwest.workspace = true
warp.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# GraphQL
async-graphql.workspace = true
async-graphql-axum.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
lazy_static.workspace = true

# CLI
clap.workspace = true

# Crypto / encoding
hex.workspace = true
sha3.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# IDs
uuid.workspace = true

# Config loader
config.workspace = true

# UI framework
dioxus.workspace = true
dioxus-web.workspace = true
dioxus-desktop.workspace = true

