[workspace]
members = [
    "shared",
    "storage",
    "indexer",
    "api",
    "ui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.20"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
sha3 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.13"
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
dioxus-desktop = "0.5"
