[package]
name = "csv-p2p"
version = "0.4.0"
edition = "2021"
description = "P2P proof transport layer for CSV protocol using Nostr"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]

[dependencies]
csv-core = { path = "../csv-core" }
tokio = { workspace = true, optional = true }
tokio-stream = "0.1"
parking_lot = "0.12"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
nostr-sdk = { version = "0.33", optional = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["nostr"]
nostr = ["dep:nostr-sdk", "dep:tokio", "dep:chrono"]
