[package]
name = "csv-sdk"
version = "0.4.0"
edition = "2021"
description = "Unified SDK for CSV (Client-Side Validation) protocol — single entry point for all CSV operations"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-protocol"
homepage = "https://github.com/client-side-validation/csv-protocol"
documentation = "https://docs.rs/csv-sdk"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version = "1.75"

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core — always included
csv-core = { version = "0.4.0", path = "../csv-core" }

# Chain adapters — optional, enabled via feature flags
csv-bitcoin = { version = "0.4.0", path = "../csv-bitcoin", optional = true }
csv-ethereum = { version = "0.4.0", path = "../csv-ethereum", optional = true }
csv-sui = { version = "0.4.0", path = "../csv-sui", optional = true }
csv-aptos = { version = "0.4.0", path = "../csv-aptos", optional = true }
csv-solana = { version = "0.4.0", path = "../csv-solana", optional = true }

# Persistence
csv-store = { version = "0.4.0", path = "../csv-store", optional = true }
csv-explorer-storage = { version = "0.4.0", path = "../csv-explorer/storage", optional = true }
csv-explorer-shared = { version = "0.4.0", path = "../csv-explorer/shared", optional = true }

# Key management
csv-keys = { version = "0.4.0", path = "../csv-keys", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
async-std = { version = "1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "console"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# Serialization / utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
log = "0.4"
toml = "0.8"
dirs = "5.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"], optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"], optional = true }

# Optional: bring in chain-specific heavy deps when full chain support is needed
bitcoin = { version = "0.32", features = ["serde", "rand"], optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }
bip32 = { version = "0.5", features = ["std", "mnemonic"], optional = true }
solana-sdk = { version = "3.0", optional = true }

[features]
default = ["std", "tokio"]
std = ["csv-core/std"]

# Chain features
bitcoin = ["dep:csv-bitcoin", "dep:bitcoin", "dep:bip32", "csv-bitcoin/signet-rest"]
ethereum = ["dep:csv-ethereum", "csv-ethereum/rpc"]
sui = ["dep:csv-sui", "csv-sui/rpc"]
aptos = ["dep:csv-aptos", "csv-aptos/rpc"]
solana = ["dep:csv-solana", "csv-solana/rpc"]
all-chains = ["bitcoin", "ethereum", "sui", "aptos", "solana"]

# RPC features for chain queries
rpc = [
    "bitcoin",
    "ethereum",
    "csv-bitcoin/rpc",
    "csv-bitcoin/signet-rest",
    "csv-ethereum/rpc",
]

# Runtime features
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
wasm = ["dep:wasm-bindgen-futures", "dep:web-sys", "dep:gloo-timers", "csv-core/std"]

# Storage features
sqlite = ["dep:csv-store", "dep:sqlx", "dep:chrono"]
in-memory = []

# Cross-chain persistence (SC-02)
cross-chain-persist = ["dep:csv-explorer-storage", "dep:csv-explorer-shared", "dep:sqlx", "dep:chrono"]

# Wallet / crypto
wallet = ["dep:csv-keys", "dep:ed25519-dalek", "dep:bip32"]

# Experimental features
experimental = ["csv-core/experimental"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
csv-store = { version = "0.4.0", path = "../csv-store" }

[[example]]
name = "subscriptions"
path = "../examples/subscriptions.rs"
required-features = ["all-chains", "tokio"]

[[example]]
name = "performance"
path = "../examples/performance.rs"
required-features = ["all-chains", "tokio"]

[[example]]
name = "gaming"
path = "../examples/gaming.rs"
required-features = ["all-chains", "tokio"]

[[example]]
name = "parallel_verification"
path = "../examples/parallel_verification.rs"
required-features = ["all-chains", "tokio"]

[lints]
workspace = true