[package]
name = "csv-stark"
version = "0.1.0"
edition = "2024"
description = "STARK batch verification for IoT sensor streams in the CSV protocol"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[dependencies]
csv-core = { path = "../csv-core" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"
bincode = "1.3"

[dev-dependencies]
rand = "0.8"
