[package]
name = "csv-store"
version = "0.5.0"
edition = "2024"
description = "SQLite persistence layer for CSV Adapter seal and anchor storage"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-protocol"
homepage = "https://github.com/client-side-validation/csv-protocol"
documentation = "https://docs.rs/csv-store"
readme = "README.md"
keywords = ["sqlite", "persistence", "blockchain", "csv-validation", "storage"]
categories = ["database", "cryptography::cryptocurrencies"]
publish = true
rust-version = "1.95"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-core = { version = "0.5.0", path = "../csv-core" }
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = { version = "5.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
base64 = "0.22"

# Browser storage dependencies
web-sys = { version = "0.3", features = ["DomStringList", "Event", "EventTarget", "Storage", "Window", "IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbOpenDbRequest", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

# Encryption dependencies - CRITICAL FIX: AES-GCM for encrypted seal nullifier storage
aes-gcm = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
zeroize = { version = "1.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = ["sqlite", "file-storage"]
sqlite = ["dep:rusqlite"]
file-storage = ["dep:dirs"]
clap = ["dep:clap"]
browser-storage = ["dep:web-sys", "dep:wasm-bindgen"]
encrypted-storage = ["browser-storage", "dep:wasm-bindgen-futures", "dep:serde-wasm-bindgen", "dep:js-sys", "dep:aes-gcm", "dep:hmac", "dep:sha2", "dep:pbkdf2", "dep:zeroize", "dep:getrandom"]
