[package]
name = "csv-wallet"
version = "0.4.0"
edition = "2021"
description = "Standalone multi-chain wallet for CSV Adapter with Dioxus UI"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-adapter"
homepage = "https://github.com/client-side-validation/csv-adapter"
readme = "README.md"
publish = false

[[bin]]
name = "csv-wallet"
path = "src/main.rs"

[dependencies]
# Core CSV Adapter types
csv-adapter = { path = "../csv-adapter", default-features = false, features = ["in-memory", "wallet"] }
csv-adapter-core = { path = "../csv-adapter-core" }
csv-adapter-store = { path = "../csv-adapter-store", default-features = false, features = ["browser-storage"] }
csv-adapter-keystore = { path = "../csv-adapter-keystore", features = ["wasm"] }
csv-adapter-solana = { path = "../csv-adapter-solana", optional = true }

# Dioxus 0.7
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-router = "0.7"

# Cryptography - wasm compatible
getrandom = { version = "0.2", features = ["js"] }
secp256k1 = { version = "0.28", features = ["rand-std"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
hex = "0.4.3"
bs58 = "0.5"
rand = "0.8"
bip32 = { version = "0.5", features = ["std", "mnemonic"] }
bitcoin = { version = "0.32", features = ["std", "rand-std"] }

# Encryption
aes-gcm = "0.10"
zeroize = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Web/wasm
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.70", features = ["Window", "Storage", "Document", "Element", "HtmlInputElement", "FileReader", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "File", "FileList", "ProgressEvent"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.70"
gloo-timers = { workspace = true, features = ["futures"] }
futures = "0.3"
serde-wasm-bindgen = "0.6"

# HTTP for wasm
reqwest = { version = "0.12.12", features = ["json"] }

# BCS encoding (used by both Sui and Aptos)
bcs = "0.1"

# Base64 for Solana transaction encoding
base64 = "0.21"

[dev-dependencies]
# Web testing
wasm-bindgen-test = "0.3"

[features]
default = []
solana = ["dep:csv-adapter-solana"]
