[package]
name = "csv-wallet"
version = "0.5.0"
edition = "2024"
description = "Standalone multi-chain wallet for CSV Protocol with Dioxus UI"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/client-side-validation/csv-protocol"
homepage = "https://github.com/client-side-validation/csv-protocol"
readme = "README.md"
publish = false

[[bin]]
name = "csv-wallet"
path = "src/main.rs"

[dependencies]
# Core CSV Protocol types
csv-sdk = { path = "../csv-sdk", default-features = false, features = ["in-memory", "wallet", "tokio"] }
csv-core = { path = "../csv-core" }
csv-store = { path = "../csv-store", default-features = false, features = ["browser-storage", "encrypted-storage"] }
csv-keys = { path = "../csv-keys", features = ["wasm", "production"] }
csv-solana = { path = "../csv-solana", optional = true }
csv-bitcoin = { path = "../csv-bitcoin", optional = true }
csv-ethereum = { path = "../csv-ethereum", optional = true }

# Dioxus 0.7
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-router = "0.7"

# Cryptography - wasm compatible
getrandom = { version = "0.2", features = ["js"] }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
hex = "0.4.3"
bs58 = "0.5"
rand = { version = "0.8", features = ["std"] }
bip32 = { version = "0.5", features = ["std", "mnemonic"] }
bitcoin = { version = "0.32", default-features = false, features = ["serde", "rand-std", "std"] }

# Ethereum RLP encoding - CRITICAL FIX: proper EIP-1559 encoding instead of manual byte concat
rlp = "0.5"
ethereum-types = "0.14"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime and WebSocket support
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
dirs = "5.0"

# Web/wasm
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.70", features = ["Window", "Storage", "Document", "Element", "HtmlInputElement", "FileReader", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "File", "FileList", "ProgressEvent", "Clipboard", "ClipboardEvent", "Navigator", "DataTransfer", "Event", "DragEvent"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.70"
gloo-timers = { workspace = true, features = ["futures"] }
serde-wasm-bindgen = "0.6"

# HTTP for wasm
reqwest = { version = "0.12.12", features = ["json", "blocking"] }

# BCS encoding (used by both Sui and Aptos)
bcs = "0.1"

# Base64 for Solana transaction encoding
base64 = "0.21"

[dev-dependencies]
# Web testing
wasm-bindgen-test = "0.3"
# Serialize tests that modify environment variables
serial_test = "3.0"

[features]
default = ["csv-bitcoin"]
solana = ["dep:csv-solana"]
csv-bitcoin = ["dep:csv-bitcoin", "csv-sdk/bitcoin"]
csv-ethereum = ["dep:csv-ethereum", "csv-sdk/ethereum"]