[package]
name = "csv-fuzz"
version = "0.5.0"
publish = false
edition = "2024"

[dependencies]
libfuzzer-sys = "0.4"
csv-core = { path = "../csv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Prevent this from being inferred as a binary
[[bin]]
name = "proof_bundle_decode"
path = "fuzz_targets/proof_bundle_decode.rs"
test = false
doc = false

[[bin]]
name = "consignment_decode"
path = "fuzz_targets/consignment_decode.rs"
test = false
doc = false

[[bin]]
name = "rpc_parser"
path = "fuzz_targets/rpc_parser.rs"
test = false
doc = false

[[bin]]
name = "abi_decoder"
path = "fuzz_targets/abi_decoder.rs"
test = false
doc = false

[[bin]]
name = "finality_parser"
path = "fuzz_targets/finality_parser.rs"
test = false
doc = false
