[package]
name = "csv-explorer-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csv-explorer-api"
path = "src/main.rs"

[dependencies]
csv-explorer-shared = { path = "../shared" }
csv-explorer-storage = { path = "../storage" }
csv-explorer-indexer = { path = "../indexer" }
tokio.workspace = true
axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
prometheus.workspace = true
reqwest.workspace = true
