[package]
name = "csv-explorer-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csv-explorer-indexer"
path = "src/main.rs"

[dependencies]
csv-explorer-shared  = { path = "../shared" }
csv-explorer-storage = { path = "../storage" }
csv-adapter-core.workspace = true
tokio.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
prometheus.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
toml.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
sha3.workspace = true          # <-- keccak256 for Ethereum event signatures

[features]
default      = []
bitcoin      = []
ethereum     = []
sui          = []
aptos        = []
solana       = []
all-chains   = ["bitcoin", "ethereum", "sui", "aptos", "solana"]
