[package]
name = "csv-explorer-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
csv-core.workspace = true
hex.workspace = true
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Server-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thiserror.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tracing.workspace = true
toml.workspace = true
config.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
