[package]
name = "csv-explorer-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv-explorer-shared = { path = "../shared" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
serde_json.workspace = true
