[package]
name = "csv-explorer-storage"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
csv-explorer-shared = { path = "../shared" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
serde_json.workspace = true
