[package]
name = "csv-explorer-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csv-explorer-ui"
path = "src/main.rs"

[dependencies]
dioxus.workspace = true
dioxus-web = { workspace = true, optional = true }
dioxus-desktop = { workspace = true, optional = true }
dioxus-router = "0.5"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
csv-explorer-shared = { path = "../shared" }
clap.workspace = true
toml.workspace = true
thiserror = "1.0"
tokio = { workspace = true, features = ["full"] }
axum.workspace = true

[features]
default = ["web"]
web = ["dioxus-web"]
desktop = ["dioxus-desktop"]
